bin_PROGRAMS = blazer
blazer_SOURCES = blazer.cpp bb.cpp session.cpp coding.cpp mimetypes.cpp jsoncpp.cpp command.cpp command_ls.cpp command_upload_file.cpp command_file_by_id.cpp command_file_by_name.cpp command_create_bucket.cpp command_delete_bucket.cpp command_list_file_versions.cpp command_delete_file_version.cpp command_update_bucket.cpp command_hide_file.cpp
